--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="item_name_pasteis_de_belem">Pastéis de Belém</string>
     <string name="city_name_pasteis_de_belem">Lisbon</string>
     <string name="category_pasteis_de_belem">EAT</string>
-    <string name="notes_pasteis_de_belem">Pastéis de Nata | Portuguese Custard Tarts</string>
+    <string name="notes_pasteis_de_belem">Portuguese Custard Tarts.</string>
     <string name="fb_page_pasteis_de_belem">https://www.facebook.com/Pastéis-de-Belém-Página-Oficial-259064930776155/</string>
     <string name="website_pasteis_de_belem">http://pasteisdebelem.pt/en/</string>
     <string name="google_map_location_pasteis_de_belem">R. Belém 84-92, 1300-085 Lisboa, Portugal</string>
@@ -14,7 +14,7 @@
     <string name="item_name_praca_do_comercio">Praça do Comércio</string>
     <string name="city_name_praca_do_comercio">Lisbon</string>
     <string name="category_praca_do_comercio">SEE</string>
-    <string name="notes_praca_do_comercio">A square.</string>
+    <string name="notes_praca_do_comercio">Commerce Square.</string>
     <string name="fb_page_praca_do_comercio">https://www.facebook.com/pages/Praça-do-comércio-Lisboa/161359554423331</string>
     <string name="website_praca_do_comercio">https://en.wikipedia.org/wiki/Praça_do_Comércio</string>
     <string name="google_map_location_praca_do_comercio">1100-148 Lisboa, Portugal</string>
@@ -23,8 +23,17 @@
     <string name="item_name_belem_tower">Belém Tower</string>
     <string name="city_name_belem_tower">Lisbon</string>
     <string name="category_belem_tower">SEE</string>
-    <string name="notes_belem_tower">A beautiful tower.</string>
+    <string name="notes_belem_tower">Tower of St Vincent.</string>
     <string name="fb_page_belem_tower">https://www.facebook.com/pages/Belém-Tower/107417125955047</string>
     <string name="website_belem_tower">https://en.wikipedia.org/wiki/Belém_Tower</string>
     <string name="google_map_location_belem_tower">Av. de Brasília, 1400-038 Lisboa, Portugal</string>
+
+    <!-- Padrão dos Descobrimentos -->
+    <string name="item_name_padrao_dos_descobrimentos">Padrão dos Descobrimentos</string>
+    <string name="city_name_padrao_dos_descobrimentos">Lisbon</string>
+    <string name="category_padrao_dos_descobrimentos">SEE</string>
+    <string name="notes_padrao_dos_descobrimentos">Monument of the Discoveries.</string>
+    <string name="fb_page_padrao_dos_descobrimentos">https://www.facebook.com/padraodosdescobrimentos/?rf=132123063490065</string>
+    <string name="website_padrao_dos_descobrimentos">https://en.wikipedia.org/wiki/Padrão_dos_Descobrimentos</string>
+    <string name="google_map_location_padrao_dos_descobrimentos"> Av. de Brasília, 1400-038 Lisboa, Portugal</string>
 </resources>
