--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="item_name_vasco_da_gama">Vasco da Gama</string>
     <string name="city_name_vasco_da_gama">Lisbon</string>
     <string name="category_vasco_da_gama">SHOP,EAT</string>
-    <string name="notes_vasco_da_gama">KFC</string>
+    <string name="notes_vasco_da_gama">KFC, steak with egg, grilled squid, grilled sea bream.</string>
     <string name="fb_page_vasco_da_gama">https://www.facebook.com/centrovascodagama</string>
     <string name="website_vasco_da_gama">https://www.centrovascodagama.pt/en/home/</string>
     <string name="google_map_vasco_da_gama">Av. Dom João II 40, 1990&#8211;094 Lisboa, Portugal</string>
